Fix word break inconsistency and non-present email in contributing.md

--- a/css/reseter.css
+++ b/css/reseter.css
@@ -212,6 +212,7 @@ a {
   color: #3333e1;
   background-color: transparent;
   text-decoration: none;
+  word-break: break-word;
 }
 a:hover {
   color: #3434e0;
